2005-07-05  Roger Leigh  <rleigh@debian.org>

	* po/.cvsignore: Ignore generated files.

2005-07-04  Roger Leigh  <rleigh@debian.org>

	* doc/schroot/schroot-docs.sgml: Include marshallers section.

	* doc/schroot/schroot-sections.txt: Add marshallers section.

	* schroot/schroot.h: New header.  This includes all other headers,
	and is used by glib-mkenums.

	* schroot/sbuild-marshallers.list: New file.  Generate a
	marshaller returning an enum and taking no arguments
	(sbuild_cclosure_marshal_ENUM__VOID).

	* schroot/Makefile.am: Generate GObject closure marshallers and
	GType typebuiltins.  Distribute the generated code.

2005-07-03  Roger Leigh  <rleigh@debian.org>

	* configure.ac, NEWS, debian/changelog: Increase version number to
	0.1.3.

2005-07-02  Roger Leigh  <rleigh@debian.org>

	* Version 0.1.2.

	* schroot/sbuild-session.c
	(sbuild_session_pam_setupenv): If no environment was specified,
	create an initial environment containing PATH and TERM.
	(sbuild_session_run_chroot): Search PATH for the specified
	command, in case the user didn't use an absolute path.

	* schroot/schroot.1.in: Add additional usage examples.

2005-07-02  Roger Leigh  <rleigh@debian.org>

	* README: Remove usage examples.

	* schroot/schroot.conf.5.in: Don't indent example.

	* schroot/schroot.1.in: Add usage examples.

2005-07-02  Roger Leigh  <rleigh@debian.org>

	* Updated README (translation and usage examples).

	* po/en_GB.po: Add British English translation.

	* po/en.po: Remove.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* debian/control (Standards-Version): Upgrade to Standards-Version
	3.6.2.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* configure.ac, NEWS, debian/changelog: Increase version number to
	0.1.2.

2005-06-25  Roger Leigh  <rleigh@debian.org>

	* Remove UCS characters from string literals.  For the time being,
	gettext will have to handle this.

	* Update .cvsignore files.

	* TODO: Remove gettext item.
